# undercover

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  start.sh
.github/workflows/: android-build.yml
assets/: index-BHS9degY.js  index-BjSDS81M.css  index-BtM2wq0H.css  index-Ch5lAfHb.js
client/: .env.production  capacitor.config.ts  deploy.sh  index.html  package.json  vite.config.ts
client/android/app/: build.gradle
client/src/: App.tsx  index.css  main.tsx
client/src/components/: OnboardingModal.tsx  RoleSelector.tsx  ThemeToggle.tsx  theme-provider.tsx
client/src/data/: wordPairs.ts
client/src/i18n/: index.ts
client/src/pages/: GamePage.tsx  HistoryPage.tsx  HomePage.tsx  MultiplayerSetupPage.tsx  OnboardingPage.tsx  ResultsPage.tsx  RevealPage.tsx  SettingsPage.tsx  SetupPage.tsx  index.ts
client/src/services/: api.ts  socket.ts
client/src/store/: gameStore.ts
i18n/: en.json  fr.json  key_map.md  validation_report.md
qa/: README.md  playwright.config.ts
qa/tests/: smoke.spec.ts
server/: package.json
server-py/: .env.example  README.md  pyproject.toml  requirements.txt  test_game.py  undercover.db
server-py/src/: config.py  database.py  main.py  socket_manager.py
server-py/src/data/: seed_words.py
server-py/src/models/: game.py  schemas.py
server-py/src/routes/: game_routes.py  word_routes.py
server-py/src/services/: game_service.py  word_service.py
server/src/: index.ts
server/src/data/: words.ts
server/src/game/: Room.ts  (+2 more)
shared/: package.json  tsconfig.json
shared/src/: index.ts
(+14 files in other folders)
